deleted extra, unused pictures

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,12 @@ body {
 
 @media(min-width: 450px) {
   
+
+/* 
+###################
+  HERO
+###################
+*/
   
   .hero-container .hero-jumbo {
     padding-top: 50vh;
